[gd_scene load_steps=8 format=3 uid="uid://cf5754ta8jxgc"]

[ext_resource type="Script" path="res://Scripts/select_page.gd" id="1_0o01g"]
[ext_resource type="Texture2D" uid="uid://bxdgsk7d26xl0" path="res://assets/images/gender_select/bg.webp" id="2_bpnu7"]
[ext_resource type="Texture2D" uid="uid://o6l0s3i5ig2m" path="res://assets/images/gender_select/male.webp" id="3_kbuhq"]
[ext_resource type="PackedScene" uid="uid://g74nwhc3va1v" path="res://Scenes/porer_dhap.tscn" id="4_vmoh7"]
[ext_resource type="Texture2D" uid="uid://dg7s3ujexvimr" path="res://assets/images/gender_select/female.webp" id="4_weit4"]
[ext_resource type="FontFile" uid="uid://xf3iklv5806" path="res://assets/fonts/LiAlinurKurigramUnicode.woff2" id="5_opxb7"]
[ext_resource type="FontFile" uid="uid://hl5jas8diunp" path="res://assets/fonts/LiSirajeeSanjarUnicode.woff" id="6_77j71"]

[node name="Select Page" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0o01g")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1149.0
offset_bottom = 647.0
texture = ExtResource("2_bpnu7")
expand_mode = 1

[node name="Cards" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 81.0
offset_right = 1840.0
offset_bottom = 741.0
scale = Vector2(0.541564, 0.620978)
theme_override_constants/h_separation = 105
columns = 2

[node name="MaleButton" type="TextureButton" parent="Cards"]
z_index = 2
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_kbuhq")

[node name="BorderGlow" type="ColorRect" parent="Cards/MaleButton"]
z_index = -1
layout_mode = 2
offset_left = -16.6185
offset_top = -16.1036
offset_right = 833.381
offset_bottom = 603.896
color = Color(0, 0.764706, 1, 1)

[node name="FemaleButton" type="TextureButton" parent="Cards"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_weit4")

[node name="BorderGlow" type="ColorRect" parent="Cards/FemaleButton"]
z_index = -1
layout_mode = 2
offset_left = -15.2134
offset_top = -14.4933
offset_right = 834.787
offset_bottom = 605.507
color = Color(0, 0.764706, 1, 1)

[node name="Labels" type="Node" parent="."]

[node name="BannerText" type="Label" parent="Labels"]
texture_filter = 2
offset_left = 98.0
offset_top = 498.0
offset_right = 389.0
offset_bottom = 540.0
theme_override_fonts/font = ExtResource("5_opxb7")
theme_override_font_sizes/font_size = 22
text = "যেকোনো একটি নির্বাচন করুন।"

[node name="Nari" type="Label" parent="Labels"]
visible = false
texture_filter = 2
offset_left = 708.0
offset_top = 410.0
offset_right = 764.0
offset_bottom = 462.0
theme_override_fonts/font = ExtResource("6_77j71")
theme_override_font_sizes/font_size = 37
text = "নারী"

[node name="Purush" type="Label" parent="Labels"]
visible = false
texture_filter = 2
offset_left = 333.0
offset_top = 395.0
offset_right = 414.0
offset_bottom = 447.0
theme_override_fonts/font = ExtResource("6_77j71")
theme_override_font_sizes/font_size = 37
text = "পুরুষ"

[node name="Button" parent="." instance=ExtResource("4_vmoh7")]
layout_mode = 0
offset_left = 792.0
offset_top = 485.0
offset_right = 1025.0
offset_bottom = 555.0

[connection signal="pressed" from="Cards/FemaleButton" to="." method="_on_femaile_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
